# smormlpy

./: README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: main.yml
{{ cookiecutter.project_slug }}/tests/: test_main.py  test_package.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  main.py
