[tool.poetry]
name = "smormlpy"
version = "0.1.0"
description = "A cookiecutter-template for SMO/MRML tools and projects"
authors = ["Philipp Kessling <p.kessling@leibniz-hbi.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
cookiecutter = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
