[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.project_author_name }}"]
license = "{{ cookiecutter.project_license }}"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
loguru = "^0.6.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.6.0"
coverage = "^6.4.2"
pdoc3 = "^0.10.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report html:tests/coverage --cov=ponyexpress --capture=sys"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.project_slug }}.main:cli'
