[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.project_author_name }}"]
license = "{{ cookiecutter.project_license }}"

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
loguru = "*"
PyYAML = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
coverage = "*"
pdoc3 = "*"
pre-commit = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report html:tests/coverage --cov={{ cookiecutter.project_slug }} --capture=sys --html=tests/report.html --self-contained-html"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = '{{ cookiecutter.project_slug }}.main:cli'
